# discord-free-game-notifier

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt  ubisoft.json
.github/: actionlint.yaml  renovate.json
.github/workflows/: build-exe.yml  codeql-analysis.yml  codeql.yml  docker-publish.yml  ruff.yml  static.yml  version-bump.yml
discord_free_game_notifier/: discord_free_game_notifier.py  epic.py  epic_json.py  gog.py  main.py  server.js  settings.py  steam.py  steam_json.py  ubisoft.py  utils.py  webhook.py
extras/: discord-free-game.service  discord-free-game.timer
pages/: epic.json  epic_mobile.json  index.html  robots.txt  sitemap.xml  steam.json  ubisoft.json
src/discord_free_game_notifier/: epic.py  epic_json.py  epic_json_check.py  epic_mobile.py  epic_mobile_check.py  gog.py  main.py  settings.py  steam.py  steam_json.py  steam_json_check.py  test_embeds.py  ubisoft.py  utils.py  webhook.py
tests/: Steam.html  Steam_empty.html  epic-api-2023-05-29.json  epic_search_with_dlc.json  games.txt  gog_has_games.html  gog_no_games.html  test_discord_free_game_notifier.py  test_epic.py  test_epic_json.py  test_epic_lineoffers.py  test_epic_mobile.py  test_epic_parsing.py  test_filters.py  test_gog.py  test_posted_normalization.py  test_scheduler.py  test_steam.py  test_steam_json.py  test_timeout_logging.py  test_ubisoft.py  test_utils.py  test_webhook.py
