[project]
name = "discord-free-game-notifier"
version = "1.1.0"
description = "Send webhook to Discord when a new game releases on Epic, Steam, GOG and Ubisoft."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "apscheduler",
  "beautifulsoup4",
  "discord-webhook",
  "loguru",
  "platformdirs",
  "python-dotenv",
  "pytz",
  "requests",
]

[dependency-groups]
dev = ["pytest"]

[tool.poetry]
name = "discord-free-game-notifier"
version = "1.1.0"
description = "Send webhook to Discord when a new game releases on Epic, Steam, GOG and Ubisoft."
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
bot = "discord_free_game_notifier.main:main"

[tool.poetry.dependencies]
python = "^3.12"
apscheduler = "^3.11.0"
beautifulsoup4 = "^4.12.3"
discord-webhook = "^1.3.1"
loguru = "^0.7.2"
platformdirs = "^4.3.6"
python-dotenv = "^1.0.1"
pytz = "^2024.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
unsafe-fixes = true
preview = true
line-length = 140 # Because we have JSON in the code that is long
lint.select = ["ALL"]
lint.ignore = [
  "D100",
  "D104",
  "CPY001",
  "ERA001",
  "TD002",
  "TD003",
  "FIX002",
  "COM812",
  "ISC001",
  "DJ001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "SIM114"]
