[project]
name = "discord-free-game-notifier"
version = "2.3.0"
description = "Send webhook to Discord when a new game releases on Epic, Steam, GOG and Ubisoft."
readme = "README.md"
authors = [{ name = "Joakim Hellsén", email = "tlovinator@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "apscheduler",
    "beautifulsoup4",
    "curl-cffi",
    "discord-webhook",
    "httpx",
    "loguru",
    "platformdirs",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "pytz",
    "selectolax",
    "sentry-sdk",
]

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest", "pyinstaller", "hypothesis", "types-pytz", "types-requests"]

[tool.ruff]
fix = true
preview = true
unsafe-fixes = true
line-length = 140

format.docstring-code-format = true
format.preview = true

lint.future-annotations = true
lint.isort.force-single-line = true
lint.pycodestyle.ignore-overlong-task-comments = true
lint.pydocstyle.convention = "google"
lint.select = ["ALL"]

# Don't automatically remove unused variables
lint.unfixable = ["F841"]

lint.ignore = [
    "ANN002",  # Checks that function *args arguments have type annotations.
    "ANN003",  # Checks that function **kwargs arguments have type annotations.
    "ARG001",  # Checks for the presence of unused arguments in function definitions.
    "C901",    # Checks for functions with a high McCabe complexity.
    "CPY001",  # Checks for the absence of copyright notices within Python files.
    "D100",    # Checks for undocumented public module definitions.
    "D101",    # Checks for undocumented public class definitions.
    "D102",    # Checks for undocumented public method definitions.
    "D103",    # Checks for undocumented public function definitions.
    "D104",    # Checks for undocumented public package definitions.
    "D105",    # Checks for undocumented magic method definitions.
    "D106",    # Checks for undocumented public class definitions, for nested classes.
    "E501",    # Checks for lines that exceed the specified maximum character length.
    "ERA001",  # Checks for commented-out Python code.
    "FIX002",  # Checks for "TODO" comments.
    "N815",    # Checks for class variable names that follow the mixedCase convention.
    "PLR0911", # Checks for functions or methods with too many return statements.
    "PLR0912", # Checks for functions or methods with too many branches, including (nested) if, elif, and else branches, for loops, try-except clauses, and match and case statements.
    "PLR6301", # Checks for the presence of unused self parameter in methods definitions.
    "RUF012",  # Checks for mutable default values in class attributes.

    # Conflicting lint rules when using Ruff's formatter
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812", # Checks for the absence of trailing commas.
    "COM819", # Checks for the presence of prohibited trailing commas.
    "D206",   # Checks for docstrings that are indented with tabs.
    "D300",   # Checks for docstrings that use '''triple single quotes''' instead of """triple double quotes""".
    "E111",   # Checks for indentation with a non-multiple of 4 spaces.
    "E114",   # Checks for indentation of comments with a non-multiple of 4 spaces.
    "E117",   # Checks for over-indented code.
    "ISC001", # Checks for implicitly concatenated strings on a single line.
    "ISC002", # Checks for implicitly concatenated strings that span multiple lines.
    "Q000",   # Checks for inline strings that use single quotes or double quotes, depending on the value of the lint.flake8-quotes.inline-quotes option.
    "Q001",   # Checks for multiline strings that use single quotes or double quotes, depending on the value of the lint.flake8-quotes.multiline-quotes setting.
    "Q002",   # Checks for docstrings that use single quotes or double quotes, depending on the value of the lint.flake8-quotes.docstring-quotes setting.
    "Q003",   # Checks for strings that include escaped quotes, and suggests changing the quote style to avoid the need to escape them.
    "W191",   # Checks for indentation that uses tabs.
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "ARG",
    "FBT",
    "PLR0904",
    "PLR2004",
    "PLR6301",
    "S101",
    "S105",
    "S106",
    "S311",
    "SLF001",
]

[tool.mypy]
python_version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = ["discord_webhook", "discord_webhook.*", "apscheduler.*"]
ignore_missing_imports = true
